<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_white_5"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="25dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/layout_under_line_gray">
        <!--标题-->
        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_centerInParent="true"
            android:maxWidth="240dp"
            android:maxLines="1"
            android:text="@string/dialog_password_title"
            android:textSize="16sp" />
        <!--关闭按钮-->
        <ImageView
            android:id="@+id/btn_dialog_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:scaleType="center"
            android:src="@mipmap/ic_dialog_close"
            android:tint="@color/black" />
    </RelativeLayout>

    <!--提示内容-->
    <TextView
        android:id="@+id/tv_dialog_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_80"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:text="@string/dialog_password_tip" />

    <!--内容布局-->
    <LinearLayout
        android:id="@+id/ll_dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/et_dialog_pwd_1"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:background="@drawable/shape_gray_3_k" />

            <ImageView
                android:id="@+id/et_dialog_pwd_2"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/shape_gray_3_k" />

            <ImageView
                android:id="@+id/et_dialog_pwd_3"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/shape_gray_3_k" />

            <ImageView
                android:id="@+id/et_dialog_pwd_4"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/shape_gray_3_k" />

            <ImageView
                android:id="@+id/et_dialog_pwd_5"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/shape_gray_3_k" />

            <ImageView
                android:id="@+id/et_dialog_pwd_6"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:background="@drawable/shape_gray_3_k" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_dialog_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:cursorVisible="false"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:maxLines="1"
            android:textColor="@android:color/transparent" />
    </FrameLayout>
    <!--确定-->
    <Button
        android:id="@+id/btn_dialog_pwd_confirm"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@mipmap/ic_btn_pay"
        android:text="@string/sys_ensure"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14" />

</LinearLayout>