<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/from_dialog_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:background="@drawable/shape_white_10"
        android:gravity="center_horizontal"
        android:minHeight="120dp"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="30dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <!--关闭按钮-->
            <ImageView
                android:id="@+id/btn_dialog_close"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:src="@mipmap/ic_dialog_close"
                android:tint="@color/black"
                android:visibility="gone" />

            <!--消息内容-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:minHeight="40dp"
                android:orientation="vertical"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_dialog_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="16"
                android:minHeight="80dp"
                android:scrollbars="vertical"
                android:text="消息"
                android:textColor="#1A1A1A" />

            <!--输入框-->
            <EditText
                android:id="@+id/et_dialog_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@drawable/shape_white_5"
                android:lineSpacingMultiplier="1.2"
                android:minHeight="40dp"
                android:padding="10dp"
                android:visibility="gone" />
        </RelativeLayout>

        <!--进度条-->
        <ProgressBar
            android:id="@+id/pb_dialog"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/layout_top_line_gray"
            android:gravity="bottom">

            <!--取消-->
            <LinearLayout
                android:id="@+id/ll_dialog_cancel"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:visibility="gone">

                <Button
                    android:id="@+id/btn_dialog_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@null"
                    android:text="@string/sys_cancel"
                    android:textColor="#000"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>

            <View
                android:id="@+id/btn_dialog_line"
                android:layout_width="0.5dp"
                android:layout_height="30dp"
                android:background="@color/gray_80"
                android:visibility="gone" />
            <!--确认-->
            <LinearLayout
                android:id="@+id/ll_dialog_ok"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_dialog_ok"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@null"
                    android:text="@string/sys_ensure"
                    android:textColor="#000"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/from_dialog_progress"
        android:layout_centerInParent="true"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:alpha="0.4"
        android:background="@drawable/shape_black_5"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_dialog_progress"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:src="@drawable/progress" />

        <TextView
            android:id="@+id/tv_dialog_progress_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loadding"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_dialog_title"
        style="@style/textViewStyle"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@mipmap/ic_bg_dialog_title"
        android:gravity="center"
        android:paddingTop="15dp"
        android:text="温馨提示"
        android:textSize="@dimen/sp_16" />

</RelativeLayout>